--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,10 +1,21 @@
-<!-- Include Font Awesome CDN in your HTML -->
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <nav class="navbar bg-body-tertiary" style="margin-bottom: 5px;">
   <div class="container-fluid d-flex justify-content-between align-items-center">
     <img src="../../assets/shopping-cart.png" width="30px" height="30px" style="position: absolute; margin-left: 90px;" alt="">
     <a class="navbar-brand" routerLink="/home">DP Store</a>
+    <div class="d-flex" style=" right: 90px; ">
+      <div  class="me-3" style="padding-right: 10px;">
+        <a class="nav-link" routerLink="/home">Home</a>
+      </div>
+      <div  class="me-3" style="padding-right: 10px;">
+        <a class="nav-link" routerLink="/about">About Us</a>
+      </div>
+      <div >
+        <a class="nav-link" routerLink="/contact">Contact Us</a>
+      </div>
+    </div>
     <div *ngIf="isCartRoute()">
       <!-- Clear cart button -->
      
@@ -12,14 +23,14 @@
     </div>
    
     <div *ngIf="!isCartRoute()" >
-      <!-- Cart button with badge -->
+     
       <button class="btn btn-secondary position-relative" (click)="goToCart()">
         <i class="fas fa-shopping-cart fa-lg" ></i>
-        <!-- Cart count badge -->
+       
         <span class="badge bg-orange rounded-circle position-absolute top-0 start-100 translate-middle">
           {{ cartService.cartCount$ | async }} 
         </span>
       </button>
     </div>
   </div>
-</nav>
+
