--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-container">
-    <h2>Login</h2>
+    <h2>Admin Login</h2>
     <form (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="username">Username:</label>
