--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -4,7 +4,7 @@
 <nav class="navbar bg-body-tertiary" style="margin-bottom: 5px;">
   <div class="container-fluid d-flex justify-content-between align-items-center">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVujhgw2S2i3NLqx7tFA2irEtiSIr5zh4CIQ&usqp=CAU" width="30px" height="30px" style="position: absolute; margin-left: 70px;" alt="">
-    <a class="navbar-brand" routerLink="/admin">Admin</a>
+    <a class="navbar-brand" routerLink="/admin" style="color: brown;">Admin</a>
     
     <div>
       <!-- Clear cart button -->
