--- a/client/src/app/contact/contact.component.css
+++ b/client/src/app/contact/contact.component.css
@@ -46,7 +46,7 @@ textarea {
 
 button {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color:brown;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -54,5 +54,9 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #67000a;
+}
+h2{
+    color: brown;
+    margin-bottom: 15px;
 }
