--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -4,15 +4,18 @@
 <nav class="navbar bg-body-tertiary" style="margin-bottom: 5px;">
   <div class="container-fluid d-flex justify-content-between align-items-center">
     <img src="../../assets/shopping-cart.png" width="30px" height="30px" style="position: absolute; margin-left: 90px;" alt="">
-    <a class="navbar-brand" routerLink="/home">DP Store</a>
+    <a class="navbar-brand" routerLink="/home" style="color: brown;">DP Store</a>
     <div class="d-flex" style=" right: 90px; ">
       <div  class="me-3" style="padding-right: 10px;">
         <a class="nav-link" routerLink="/home">Home</a>
       </div>
       <div  class="me-3" style="padding-right: 10px;">
+        <a class="nav-link" routerLink="/products">Products</a>
+      </div>
+      <div  class="me-3" style="padding-right: 10px;">
         <a class="nav-link" routerLink="/about">About Us</a>
       </div>
-      <div >
+      <div class="me-3" style="padding-right: 10px;">
         <a class="nav-link" routerLink="/contact">Contact Us</a>
       </div>
     </div>
