--- a/client/src/app/login/login.component.css
+++ b/client/src/app/login/login.component.css
@@ -34,7 +34,7 @@ button {
   display: block;
   width: 100%;
   padding: 10px;
-  background-color: #007bff;
+  background-color: brown;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -42,7 +42,12 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #67000a
+}
+
+h2{
+  margin-bottom: 25px;
+  color: brown;
 }
 
 #password{
