--- a/client/src/app/contact/contact.component.html
+++ b/client/src/app/contact/contact.component.html
@@ -8,7 +8,7 @@
 
     <div class="contact-form">
    
-        <h2>Contact Us</h2>
+        <h2>Get In Touch</h2>
         <form (ngSubmit)="onSubmit()">
             <div class="form-group">
                 <label for="name">Name:</label>
