--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -16,6 +16,10 @@
     object-fit: contain; /* Maintain aspect ratio and cover the entire space */
    
   }
+
+  .container{
+    margin-top: 30px;
+  }
   
 
   /* CSS for the card container */
@@ -33,7 +37,7 @@
   .w-100 {
     height: 500px;
     width: 100%!important;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
     margin-top: 0px;
 }
 
