--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -5,6 +5,7 @@
         <div class="carousel-item active">
             <img src="https://img.freepik.com/free-photo/online-fashion-shopping-with-computer_23-2150400628.jpg?t=st=1710854585~exp=1710858185~hmac=52be692a8bd1a3ef60a7a9089139a02fc95d14766a5007ec99961a03292659ad&w=740"
                 class="d-block w-100 " alt="">
+            <button class="img_btn" routerLink="/products">Explore More</button>
         </div>
         <div class="carousel-item">
             <img src="https://img.freepik.com/free-photo/cyber-monday-shopping-sales_23-2148688502.jpg?w=740"
