--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,15 +1,25 @@
-<div class="login-container">
-    <h2>Admin Login</h2>
-    <form (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" id="username" [(ngModel)]="email" name="username" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" [(ngModel)]="password" required>
-      </div>
-      <button type="submit">Login</button>
-    </form>
+<div class="main">
+
+  <div class="img">
+    <img src="https://live.templately.com/wp-content/uploads/2021/02/56468664-image_.png" alt="">
   </div>
+
+  <div class="login-container">
+      <h2>Admin Login</h2>
+      <form (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="username">Username:</label>
+          <input type="text" id="username" [(ngModel)]="email" name="username" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" [(ngModel)]="password" required>
+        </div>
+        <button type="submit">Login</button>
+      </form>
+    </div>
+    
+
+</div>
+
   
