--- a/client/src/app/login/login.component.css
+++ b/client/src/app/login/login.component.css
@@ -1,9 +1,4 @@
-body{
-  background: url('https://plus.unsplash.com/premium_photo-1681487829842-2aeff98f8b63?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGUlMjBjb21tZXJjZSUyMHN0b3JlJTIwYmFja2dyb3VuZCUyMGltYWdlfGVufDB8fDB8fHww');
-  background-repeat: no-repeat;
-  background-size: cover;
- 
-}
+
 
 .login-container {
   max-width: 400px;
@@ -20,6 +15,7 @@ body{
 }
 
 label {
+  margin-bottom: 7px;
   display: block;
   font-weight: bold;
 }
@@ -61,7 +57,7 @@ h2{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #ffe1e4;
+  background-color: #F4F9FF;
   width: max-content;
   margin-left: 120px;
   padding: 30px;
@@ -69,7 +65,7 @@ h2{
 }
 
 .img{
-  margin-right: 30px;
+  margin-right: 20px;
  
 }
 
