--- a/client/src/app/product/product.component.html
+++ b/client/src/app/product/product.component.html
@@ -14,7 +14,10 @@
         
         <p class="price">Price: {{ product.price }}</p>
         <button class="btn btn-primary"
-         style="margin-right: 20px; background-color: rgb(255, 128, 0); color: black; border: none; border-radius: 0;" 
+         style="margin-right: 20px;  background: rgb(2,0,36);
+         border: none;
+         border-radius: 0;
+         background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(176,50,73,1) 0%, rgba(209,32,64,1) 0%, rgba(218,103,126,1) 100%, rgba(77,0,25,1) 100%, rgba(0,212,255,1) 100%);" 
          (click)="onCheckouts(product._id)"
          >
          Buy Now</button>
