--- a/client/src/app/about/about.component.css
+++ b/client/src/app/about/about.component.css
@@ -1,27 +1,67 @@
-.main-img img{
-    width: 100%;
-    height: 600px;
+.gradient_text {
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(176,50,73,1) 0%, rgba(209,32,64,1) 0%, rgba(218,103,126,1) 100%, rgba(77,0,25,1) 100%, rgba(0,212,255,1) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent; /* Hide the original text color */
+  }
 
-}
+
 
 .main{
     display: flex;
-    margin-top: 150px;
+    align-items: center;
+    margin-top: 20px;
+    /* justify-content: space-between; */
+    margin-bottom: 50px;
+    margin-left: 20px;
 }
-
-
-
-.discription{
+.des{
     margin-left: 50px;
-    margin-right: 30px;
 }
 
-.discription_mission{
-    margin-left: 30px;
-    margin-right: 70px;
+.core_value{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 70px;
+    margin-bottom: 100px;
+    
 }
 
-
-h1{
-    color: brown;
+.box_des{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    height: 250px;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 10px 0px rgba(206, 30, 30, 0.5);
+    transition: transform 0.9s ease;
 }
+.box_des:hover {
+    transform: scale(1.07);
+}
+.box_des img{
+    width: 100px;
+    height: 100px;
+}
+h3{
+    margin-bottom: 20px;
+}
+p{
+    font-size: small;
+    text-align: center;
+}
+ button{
+    padding: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 10px;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(176,50,73,1) 0%, rgba(209,32,64,1) 0%, rgba(218,103,126,1) 100%, rgba(77,0,25,1) 100%, rgba(0,212,255,1) 100%);
+  }
+
+
