--- a/client/src/app/contact/contact.component.html
+++ b/client/src/app/contact/contact.component.html
@@ -1,14 +1,17 @@
 <app-header></app-header>
 
 <div class="main-img">
-    <img src="https://images.unsplash.com/photo-1596524430615-b46475ddff6e?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y29udGFjdCUyMHVzfGVufDB8fDB8fHww" alt="">
+
+        <div style="width: 100%;">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.2936228093376!2d72.55784831035527!3d23.012988879093662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e848ac8a7faf3%3A0x2acdd9c8fedc8456!2siFlair%20Web%20Technologies%20Pvt.%20Ltd.!5e0!3m2!1sen!2sin!4v1711976204073!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div> 
 </div>
 
 <div class="main">
 
     <div class="contact-form">
    
-        <h2>Get In Touch</h2>
+        <h2 class="gradient_text">Get In Touch</h2>
         <form (ngSubmit)="onSubmit()">
             <div class="form-group">
                 <label for="name">Name:</label>
@@ -22,13 +25,15 @@
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" rows="4" [(ngModel)]="message" required></textarea>
             </div>
-            <button type="submit">Submit</button>
+            <button style=" background: rgb(2,0,36);
+            background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(176,50,73,1) 0%, rgba(209,32,64,1) 0%, rgba(218,103,126,1) 100%, rgba(77,0,25,1) 100%, rgba(0,212,255,1) 100%);" type="submit">Submit</button>
         </form>
     </div>
 
 
     <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18906.129712753736!2d6.722624160288201!3d60.12672284414915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x463e997b1b6fc09d%3A0x6ee05405ec78a692!2sJ%C4%99zyk%20trola!5e0!3m2!1spl!2spl!4v1672239918130!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
+        <img src="https://cdni.iconscout.com/illustration/premium/thumb/negative-review-feedback-2079176-1752912.png?f=webp" alt="">
     </div>
 
    
