--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -2,19 +2,19 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <h5>DP Store</h5><br>
+          <h5 class="gradient_text">DP Store</h5><br>
           <p>We are your one-stop destination for all your fashion and lifestyle needs, offering an extensive range of products that cater to every taste and preference.</p>
          
         </div>
         <div class="col-md-4">
-            <h5>Address</h5>
+            <h5 class="gradient_text">Address</h5>
             <p>DP Fashion Avenue,</p>
             <p>Metropolitan City,</p>
             <p>Fashionville, FV 12345,</p>
             <p>United States</p>
         </div>
         <div class="col-md-4">
-          <h5>Contact Us</h5>
+          <h5 class="gradient_text">Contact Us</h5>
           <p>Phone: 123-456-7890</p>
             <p>Email: dp&#64;gmail.com</p>
         </div>
