--- a/client/src/app/header/header.component.css
+++ b/client/src/app/header/header.component.css
@@ -1,16 +1,44 @@
 /* Custom CSS for the cart count badge */
 .bg-orange {
-    background-color: rgb(255, 0, 183) !important;
+    /* background-color: rgb(255, 0, 183) !important; */
+    background: rgb(2,0,36);
+        background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(176,50,73,1) 0%, rgba(209,32,64,1) 0%, rgba(218,103,126,1) 100%, rgba(77,0,25,1) 100%, rgba(0,212,255,1) 100%);
   }
-  
+
 button{
   
     padding-left: 6px;
     padding-right: 6px;
-    border-radius: 86px
+    border-radius: 86px;
+    margin-top: 5px;
+    margin-left: 135px
 }
 
 .me-3 :hover{
-  color: brown;
+  color: rgb(239, 21, 86);
 
+}
+
+.login_details{
+  line-height: 15px;
+}
+
+.gradient_text {
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(176,50,73,1) 0%, rgba(209,32,64,1) 0%, rgba(218,103,126,1) 100%, rgba(77,0,25,1) 100%, rgba(0,212,255,1) 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent; /* Hide the original text color */
+}
+
+.badge {
+  height: 18px;
+    width: 10px;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  background-color: #f94a69;
+  color: white;
+  border-radius: 50%;
+  padding: 4px 11px 8px 5px;
+  font-size: 10px;
 }
