--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,44 +1,29 @@
 <app-header></app-header>
 
-<div *ngIf="!isProductRoute()" #carousel id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1400" data-bs-pause="false">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="https://ethicsinfotech.in/uploads/slider/e-commerce-website.png"
-          class="d-block w-100" alt="">
-            <button class="img_btn" routerLink="/products">SHOP NOW</button>
-        </div>
-        <div class="carousel-item">
-          <img src="https://img.freepik.com/free-photo/online-fashion-shopping-with-computer_23-2150400628.jpg?t=st=1710854585~exp=1710858185~hmac=52be692a8bd1a3ef60a7a9089139a02fc95d14766a5007ec99961a03292659ad&w=740"
-          class="d-block w-100 " alt="">
-           
-        </div>
-        <div class="carousel-item">
-            <img src="https://img.freepik.com/premium-photo/shopper-shopaholic-shopping-online-paying-goods-purchases-using-credit-card_122732-3715.jpg?w=740"
-                class="d-block w-100" alt="">
-        </div>
+<div *ngIf="!isProductRoute()" >
+    <div class="main">
+      <div class="des">
+        <h1>SUMMER</h1>
+        <h1 style="font-size: 70px; letter-spacing: 5px; font-weight: 900;" class="gradient_text">SALE</h1>
+        <h1>TODAY'S ONLY</h1>
+        <p>Enjoy scorching discounts on a wide range of products, from stylish summer apparel to refreshing outdoor gear.</p>
+        <button routerLink="/products">SHOP NOW</button>
+      </div>
+      <div class="image">
+        <img src="https://cdn3d.iconscout.com/3d/premium/thumb/online-shopping-delivery-8191228-6594626.png" alt="">
+      </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
 </div>
 
 <div *ngIf="!isProductRoute()" class="tag">
-  <h1>OUR COLLECTION</h1>
+  <h1 style="margin-top: 30px; margin-bottom: 50px;"  class="gradient_text">OUR COLLECTION</h1>
 </div>
 
   <div class="container">
-    
     <div class="row">
-      <div class="col-md-3" style="margin-bottom: 15px;" *ngFor="let product of products" >
+      <div class="col-md-3 ca" style="margin-bottom: 15px;" *ngFor="let product of products" >
         <div class="card-container">
-          <div class="card mb-4">
+          <div class="card mb-4" style="border: none; border-radius: 4px; box-shadow: 0px 0px 10px 0px rgb(152, 152, 152);">
             <img class="card-img-top" (click)="redirectToProductPage(product._id)" [src]="product.image" alt="{{ product.name }}">
             <div class="card-body">
               <h5 class="card-title">{{ product.name }}</h5>
@@ -46,7 +31,7 @@
               <p class="card-text" style="color: green;">Price: {{ product.price }}</p>
              
               <button class="btn btn-primary btn-cart" style="background-color: white; border: none;" (click)="addToCart(product)">
-                <i class="fas fa-shopping-cart" style="color: rgb(255, 0, 183);"></i>
+                <i class="fas fa-shopping-cart" style="color: rgb(255, 0, 93);"></i>
               </button>
             </div>
           </div>
