--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,21 +1,22 @@
 <div class="main">
 
   <div class="img">
-    <img src="https://live.templately.com/wp-content/uploads/2021/02/56468664-image_.png" alt="">
+    <img src="https://cdn3d.iconscout.com/3d/premium/thumb/man-paying-via-secure-card-payment-7129327-5791998.png?f=webp" alt="">
   </div>
 
   <div class="login-container">
-      <h2>Admin Login</h2>
+      <h2 class="gradient_text">Admin Login</h2>
       <form (ngSubmit)="onSubmit()">
         <div class="form-group">
-          <label for="username">Username:</label>
+          <label for="username">Email:</label>
           <input type="text" id="username" [(ngModel)]="email" name="username" required>
         </div>
         <div class="form-group">
           <label for="password">Password:</label>
           <input type="password" id="password" name="password" [(ngModel)]="password" required>
         </div>
-        <button type="submit">Login</button>
+        <button style="background: rgb(2,0,36);
+        background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(176,50,73,1) 0%, rgba(209,32,64,1) 0%, rgba(218,103,126,1) 100%, rgba(77,0,25,1) 100%, rgba(0,212,255,1) 100%); " type="submit">Login</button>
       </form>
     </div>
     
