--- a/server/public/style.css
+++ b/server/public/style.css
@@ -2,7 +2,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #242d60;
+  /* background: #242d60; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
   'Helvetica Neue', 'Ubuntu', sans-serif;
   height: 100vh;
@@ -243,4 +243,32 @@ header .btn {
   letter-spacing: 2px;
   position: fixed;
   right: 100px;
+}
+
+.main{
+  display: flex;
+}
+.main img{
+  width: 500px;
+  height: 500px;
+}
+
+.description{
+
+  margin-top: 150px;
+  padding: 10px;
+  background: #ffffff;
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: 112px;
+  border-radius: 6px;
+  justify-content: space-between;
+}
+
+.gradient_text {
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(176,50,73,1) 0%, rgba(209,32,64,1) 0%, rgba(218,103,126,1) 100%, rgba(77,0,25,1) 100%, rgba(0,212,255,1) 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent; /* Hide the original text color */
 }
