--- a/client/src/app/contact/contact.component.html
+++ b/client/src/app/contact/contact.component.html
@@ -33,7 +33,7 @@
 
     <div class="map">
         
-        <img src="https://cdni.iconscout.com/illustration/premium/thumb/negative-review-feedback-2079176-1752912.png?f=webp" alt="">
+        <img src="https://cdn3d.iconscout.com/3d/premium/thumb/complain-to-customer-service-8463828-6713565.png" alt="">
     </div>
 
    
