--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -19,11 +19,11 @@
         <a class="nav-link" routerLink="/contact">Contact Us</a>
       </div>
     </div>
-    <div *ngIf="isCartRoute()">
+    <!-- <div *ngIf="isCartRoute()">
    
      
       <button class="btn btn-danger" (click)="clearCart()">Clear Cart</button>
-    </div>
+    </div> -->
   
    
     <div *ngIf="!isCartRoute()" >
